# pomodoro-display

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit.ci  .releaserc.yml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.json  docker-compose.yml  download_dependencies.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml  release-drafter.yml
.github/actions/docker-buildx/: action.yml
.github/actions/docker-login/: action.yml
.github/actions/get-version/: action.yml
.github/workflows/: ci-build-image.yml  commitlint.yml  docker-publish.yml  pre-commit.yml  release-draft.yml  semantic-release.yml
docs/source/: api.rst  conf.py  index.rst
pomodoro_display/: __init__.py  app.py  prompts.json
pomodoro_display/templates/: control.html  display.html
