[project]
dependencies = ["flask >= 3.0", "flask-cors >= 6.0", "google-generativeai >= 0.3.0", "numpy >= 2.0"]
name = "pomodoro-display"
dynamic = ["version", "readme"]
description = "A pomodoro timer that can be remotely accessed and controlled. "
license = { text = "Other/Proprietary License" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = "~=3.11"

[[project.authors]]
name = "Anton Lu"
email = "anton.lu@cern.ch"

[project.urls]
homepage = "https://gitlab.cern.ch/lua/pomodoro-display"
documentation = "https://acc-py.web.cern.ch/gitlab/lua/pomodoro-display/docs/stable"
repository = "https://gitlab.cern.ch/lua/pomodoro-display"
changelog = "https://gitlab.cern.ch/lua/pomodoro-display/-/releases"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
doc = ["acc-py-sphinx", "myst-parser", "sphinx-copybutton"]
dev = ["pre-commit", "ruff", "mypy"]

[build-system]
requires = ["setuptools >= 61", "setuptools-scm[toml] ~= 10.0", "wheel"]
build-backend = "setuptools.build_meta"

# keep this for dynamic versioning
[tool.setuptools_scm]
write_to = "pomodoro_display/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = ["pomodoro_display*"]
namespaces = false

[tool.setuptools.package-data]
pomodoro_display = ["py.typed", "templates/*.html", "prompts.json"]

[project.scripts]
pomodoro-display = "pomodoro_display.app:main"

# include black configuration for easy to use with VSCode and PyCharm
# autoformatter
# For pre-commit, only ruff is used.
[tool.black]
target-version = ["py311"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".venv",
]

line-length = 88         # black and ruff default
target-version = "py311"

[tool.ruff.lint]
# All rules can be found here: https://docs.astral.sh/ruff/rules/
select = [
  "F",   # pyflakes
  "E",   # error  (pycodestyle)
  "W",   # warning (pycodestyle)
  "I",   # isort
  "N",   # naming  (pep8)
  "UP",  # pyupgrade
  "PLC", # convention  (pylint)
  "PLE", # error  (pylint)
  "PLW", # warning  (pylint)
  "PLR", # refactor  (pylint)
  # "D",  # docstring (pydocstyle),  # not enabled by default
  "PD",     # pandas
  "TRY",    # tryceratops
  "NPY",    # numpy
  "NPY201", # numpy 2.0
  "PERF",   # perflint
  "RUF",    # ruff
  # v flake8 v
  "B",
  "C4",
  "FBT",
  "A",
  "EM",
  "ISC",
  "FA",
  "G",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
]
fixable = ["ALL"]
ignore = ["E501", "W505", "ISC001", "PD901", "PLW2901", "N812", "N806", "G004"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
preview = true

[tool.mypy]
disallow_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

# for pyright LSP
[tool.pyright]
reportPrivateImportUsage = "none"
